cabal-version: 1.12

name:           smash
version:        1.0.1
description:    Please see the README on GitHub at <https://github.com/input-output-hk/smash#readme>
homepage:       https://github.com/input-output-hk/smash#readme
bug-reports:    https://github.com/input-output-hk/smash/issues
author:         IOHK
maintainer:     operations@iohk.io
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.rst
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/smash

Flag disable-basic-auth
  description:         Disable basic authentication scheme for other authentication mechanisms.
  default:             True

library

  if flag(disable-basic-auth)
    cpp-options:       -DDISABLE_BASIC_AUTH

  exposed-modules:
      Lib
      Offline
      FetchQueue
      FetchQueue.Retry
    , Types
    , DB
    , DbSyncPlugin
    -- DbSync
    , Cardano.SmashDbSync
    , Cardano.Metrics
    -- Migration
    , Cardano.Db.Database
    , Cardano.Db.Migration
    , Cardano.Db.Migration.Haskell
    , Cardano.Db.Migration.Version
    -- Config
    , Cardano.Db.PGConfig
    , Cardano.Db.Run
    , Cardano.Db.Schema
    -- DB operations
    , Cardano.Db.Error
    , Cardano.Db.Insert
    , Cardano.Db.Query
    , Cardano.Db.Types

  other-modules:
      Paths_smash
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , cardano-prelude
    , containers
    , quiet
    , servant
    , servant-server
    , servant-swagger
    , swagger2
    , wai
    , warp
    , aeson
    -- DB
    , persistent
    , persistent-postgresql
    , persistent-template >= 2.7.0
    , postgresql-simple
    , esqueleto
    -- CARDANO
    , cardano-binary
    , cardano-client
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    -- REMOVE!
    , cardano-config
    , cardano-db-sync
    , cardano-slotting
    , cardano-ledger
    , shelley-spec-ledger
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-shelley
    , ouroboros-consensus-cardano
    , iohk-monitoring
    , prometheus
    , cborg
    , io-sim-classes
    , network
    , network-mux
    , ouroboros-network
    , ouroboros-network-framework
    , typed-protocols
    -- REST
    , http-client
    , http-client-tls
    , http-types
    , base16-bytestring
    , monad-logger
    , transformers
    , transformers-except
    , resourcet
    , extra
    , conduit-extra
    , bytestring
    , text
    , time
    , directory
    , filepath
    , template-haskell
    , fast-logger
    , unix
    , contra-tracer
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable smash-exe
  main-is: Main.hs
  other-modules:
      Paths_smash
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-prelude
    , smash
    , cardano-db-sync
    , cardano-slotting
    , optparse-applicative
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite smash-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_smash
    , SmashSpec
    , SmashSpecSM
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-prelude
    , containers
    , smash
    , hspec
    , QuickCheck
    , quickcheck-state-machine >= 0.6
    , tree-diff
    -- * Required for generation of keys
    , ed25519
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
