cabal-version: 1.12

name:           smash
version:        1.1.0
description:    Please see the README on GitHub at <https://github.com/input-output-hk/smash#readme>
homepage:       https://github.com/input-output-hk/smash#readme
bug-reports:    https://github.com/input-output-hk/smash/issues
author:         IOHK
maintainer:     operations@iohk.io
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.rst
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/smash

Flag disable-basic-auth
  description:         Disable basic authentication scheme for other authentication mechanisms.
  default:             False

Flag testing-mode
  description:         A flag for allowing operations that promote easy testing.
  default:             False

library

  if flag(disable-basic-auth)
    cpp-options:       -DDISABLE_BASIC_AUTH

  if flag(testing-mode)
    cpp-options:       -DTESTING_MODE

  exposed-modules:
      SMASH.DB
    , SMASH.DbSyncPlugin
    , SMASH.FetchQueue
    , SMASH.FetchQueue.Retry
    , SMASH.Lib
    , SMASH.Offline
    , SMASH.Types
    -- DbSync
    , SMASH.Cardano.Metrics
    , SMASH.Cardano.SmashDbSync
    -- Migration
    , SMASH.Cardano.Db.Database
    , SMASH.Cardano.Db.Migration
    , SMASH.Cardano.Db.Migration.Haskell
    , SMASH.Cardano.Db.Migration.Version
    -- Config
    , SMASH.Cardano.Db.PGConfig
    , SMASH.Cardano.Db.Run
    , SMASH.Cardano.Db.Schema
    -- DB operations
    , SMASH.Cardano.Db.Delete
    , SMASH.Cardano.Db.Error
    , SMASH.Cardano.Db.Insert
    , SMASH.Cardano.Db.Query
    , SMASH.Cardano.Db.Types

  other-modules:
      Paths_smash
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , cardano-prelude
    , containers
    , quiet
    , servant
    , servant-server
    , servant-swagger
    , swagger2
    , wai
    , warp
    -- DB
    , esqueleto
    , persistent
    , persistent-postgresql
    , persistent-template >= 2.7.0
    , postgresql-simple
    -- CARDANO
    , cardano-binary
    , cardano-client
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    -- REMOVE!
    , cardano-config
    , cardano-db-sync
    , cardano-ledger
    , cardano-slotting
    , cborg
    , io-sim-classes
    , iohk-monitoring
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , prometheus
    , shelley-spec-ledger
    , typed-protocols
    -- REST
    , base16-bytestring
    , bytestring
    , conduit-extra
    , contra-tracer
    , directory
    , extra
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , monad-logger
    , resourcet
    , template-haskell
    , text
    , time
    , transformers
    , transformers-except
    , unix
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

executable smash-exe
  main-is: Main.hs
  other-modules:
      Paths_smash
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cardano-db-sync
    , cardano-prelude
    , cardano-slotting
    , optparse-applicative
    , smash
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields

test-suite smash-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_smash
    , SmashSpec
    , SmashSpecSM
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , QuickCheck
    , cardano-prelude
    , containers
    , hspec
    , quickcheck-state-machine >= 0.6
    , smash
    , tree-diff
    -- * Required for generation of keys
    , ed25519
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
