cabal-version:      1.12
name:               smash
version:            1.1.0
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/smash#readme>

homepage:           https://github.com/input-output-hk/smash#readme
bug-reports:        https://github.com/input-output-hk/smash/issues
author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.rst
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/smash

flag disable-basic-auth
  description:
    Disable basic authentication scheme for other authentication mechanisms.

  default:     False

flag testing-mode
  description: A flag for allowing operations that promote easy testing.
  default:     False

flag stub-mode
  description: Only enable the stub server, disable cardano-db-sync
  default:     False

library
  if flag(disable-basic-auth)
    cpp-options: -DDISABLE_BASIC_AUTH

  if flag(testing-mode)
    cpp-options: -DTESTING_MODE

  if flag(stub-mode)
    cpp-options: -DSTUB_MODE
  else
    build-depends:
      cardano-db-sync
    exposed-modules:
      Cardano.SMASH.DBSyncPlugin
      Cardano.SMASH.DBSync.SmashDbSync
      Cardano.SMASH.DBSync.Db.Database

  exposed-modules:
    Cardano.SMASH.API
    Cardano.SMASH.DB
    Cardano.SMASH.DBSync.Db.Delete
    Cardano.SMASH.DBSync.Db.Error
    Cardano.SMASH.DBSync.Db.Insert
    Cardano.SMASH.DBSync.Db.Migration
    Cardano.SMASH.DBSync.Db.Migration.Haskell
    Cardano.SMASH.DBSync.Db.Migration.Version
    Cardano.SMASH.DBSync.Db.PGConfig
    Cardano.SMASH.DBSync.Db.Query
    Cardano.SMASH.DBSync.Db.Run
    Cardano.SMASH.DBSync.Db.Schema
    Cardano.SMASH.DBSync.Db.Types
    Cardano.SMASH.DBSync.Metrics
    Cardano.SMASH.FetchQueue
    Cardano.SMASH.FetchQueue.Retry
    Cardano.SMASH.Lib
    Cardano.SMASH.Offline
    Cardano.SMASH.Types

  other-modules:      Paths_smash
  hs-source-dirs:     src
  build-depends:
      aeson
    , base                         >=4.7   && <5
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-client
    , cardano-config
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger
    , cardano-prelude
    , cardano-slotting
    , cborg
    , conduit-extra
    , containers
    , contra-tracer
    , directory
    , esqueleto
    , extra
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , io-sim-classes
    , iohk-monitoring
    , monad-logger
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , persistent
    , persistent-postgresql
    , persistent-template          >=2.7.0
    , postgresql-simple
    , prometheus
    , quiet
    , resourcet
    , servant
    , servant-server
    , servant-swagger
    , shelley-spec-ledger
    , swagger2
    , template-haskell
    , text
    , time
    , transformers
    , transformers-except
    , typed-protocols
    , unix
    , wai
    , warp

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields

executable smash-exe
  main-is:            Main.hs
  other-modules:      Paths_smash
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >=4.7 && <5
    , cardano-prelude
    , cardano-slotting
    , optparse-applicative
    , smash

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields

  if flag(testing-mode)
    cpp-options: -DTESTING_MODE

  if flag(stub-mode)
    cpp-options: -DSTUB_MODE
  else
    build-depends:
      cardano-db-sync

test-suite smash-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_smash
    SmashSpec
    SmashSpecSM

  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                      >=4.7 && <5
    , cardano-prelude
    , containers
    , ed25519
    , hspec
    , QuickCheck
    , quickcheck-state-machine  >=0.6
    , smash
    , tree-diff

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
