cabal-version:      1.12
name:               cardano-sync
version:            1.0.0
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/smash#readme>

homepage:           https://github.com/input-output-hk/smash#readme
bug-reports:        https://github.com/input-output-hk/smash/issues
author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/smash

flag disable-basic-auth
  description: Disable basic authentication scheme for other authentication mechanisms.
  default:     False

flag testing-mode
  description: A flag for allowing operations that promote easy testing.
  default:     False

library
  if flag(disable-basic-auth)
    cpp-options: -DDISABLE_BASIC_AUTH

  if flag(testing-mode)
    cpp-options: -DTESTING_MODE

  exposed-modules:
    Cardano.Sync.CardanoSync

    Cardano.Sync.DbAction
    Cardano.Sync.Plugin
    Cardano.Sync.Types
    Cardano.Sync.Error

    Cardano.Sync.StateQuery
    Cardano.Sync.LedgerState

    Cardano.Sync.Util
    Cardano.Sync.Config.Types
    Cardano.Sync.Tracing.ToObjectOrphans

    Cardano.Sync.Config
    Cardano.Sync.Config.Byron
    Cardano.Sync.Config.Cardano
    Cardano.Sync.Config.Node
    Cardano.Sync.Config.Shelley
    Cardano.Sync.Era.Cardano.Util
    Cardano.Sync.Era.Byron.Util
    Cardano.Sync.Era.Shelley.Generic.Block
    Cardano.Sync.Era.Shelley.Generic.Metadata
    Cardano.Sync.Era.Shelley.Generic.Tx
    Cardano.Sync.Era.Shelley.Generic.Util
    Cardano.Sync.Era.Shelley.Generic
    Cardano.Sync.Era.Shelley.Generic.EpochUpdate
    Cardano.Sync.Era.Shelley.Generic.ProtoParams
    Cardano.Sync.Era.Shelley.Generic.Rewards
    Cardano.Sync.Era.Shelley.Generic.StakeCred
    Cardano.Sync.Era.Shelley.Generic.StakeDist

  hs-source-dirs:     src
  build-depends:
      base                         >=4.7   && <5
    , aeson
    , bytestring
    , cardano-client
    , cardano-crypto-wrapper
    , cardano-crypto-class
    , cardano-ledger
    , cardano-prelude
    , cardano-slotting
    , cardano-node
    , cborg
    , contra-tracer
    , directory
    , iohk-monitoring
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , shelley-spec-ledger
    , stm
    , text
    , time
    , transformers
    , transformers-except
    , typed-protocols
    , lifted-base
    , monad-control
    , memory
    , base16-bytestring
    , pretty-show
    , unix
    , cardano-binary
    , extra
    , filepath
    , yaml
    , containers
    , cardano-crypto
    , cryptonite
    , cardano-ledger-shelley-ma
    , vector
    , cardano-api
    , small-steps
    , cardano-crypto-praos
    , binary

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields

