cabal-version:      1.12
name:               smash-sync
version:            1.3.0
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/smash#readme>

homepage:           https://github.com/input-output-hk/smash#readme
bug-reports:        https://github.com/input-output-hk/smash/issues
author:             IOHK
maintainer:         operations@iohk.io
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/smash

flag disable-basic-auth
  description: Disable basic authentication scheme for other authentication mechanisms.
  default:     False

flag testing-mode
  description: A flag for allowing operations that promote easy testing.
  default:     False

library
  if flag(disable-basic-auth)
    cpp-options: -DDISABLE_BASIC_AUTH

  if flag(testing-mode)
    cpp-options: -DTESTING_MODE

  exposed-modules:
    Cardano.Sync.SmashDbSync

  hs-source-dirs:     src
  build-depends:
      aeson
    , base                         >=4.7   && <5
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cardano-client
    , cardano-config
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-db-sync
    , cardano-ledger
    , cardano-prelude
    , cardano-slotting
    , cborg
    , conduit-extra
    , containers
    , contra-tracer
    , directory
    , esqueleto
    , extra
    , fast-logger
    , filepath
    , http-client
    , http-client-tls
    , http-types
    , io-sim-classes
    , iohk-monitoring
    , monad-logger
    , network
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-byron
    , ouroboros-consensus-cardano
    , ouroboros-consensus-shelley
    , ouroboros-network
    , ouroboros-network-framework
    , persistent
    , persistent-postgresql
    , persistent-template          >=2.7.0
    , postgresql-simple
    , prometheus
    , quiet
    , resourcet
    , servant
    , servant-server
    , servant-swagger
    , shelley-spec-ledger
    , smash-servant-types
    , swagger2
    , template-haskell
    , text
    , time
    , transformers
    , transformers-except
    , typed-protocols
    , unix
    , wai
    , warp

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields

